--- a/code_project/sub_config_visualization.yaml
+++ b/code_project/sub_config_visualization.yaml
@@ -155,9 +155,9 @@ plots:
       clabel: Frequency # Colorbar label
       clabel_fontsize: 14
       cmin: null
-      cmax: 50000
+      cmax: 10000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 500 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: null
@@ -188,9 +188,9 @@ plots:
       clabel: Frequency # Colorbar label
       clabel_fontsize: 14
       cmin: null
-      cmax: 2000
+      cmax: 1000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 500 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: ['stabilized']
@@ -221,7 +221,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 50000
+      cmax: null
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
@@ -254,7 +254,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 5000
+      cmax: 500
       cmap: hot
       bins: 1000
       log_scale: false
@@ -287,9 +287,9 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 50000
+      cmax: 5000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 500 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: null
@@ -322,7 +322,7 @@ plots:
       cmin: null
       cmax: null
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 500 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: ['stabilized']
@@ -353,9 +353,9 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 50000
+      cmax: 5000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 2000 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: null
@@ -386,9 +386,9 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 50000
+      cmax: 10000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
-      bins: 2000 # Number of bins for histogram2d
+      bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
       grid_on: false
       filter_termination_reason: null
