--- a/code_project/sub_config_visualization.yaml
+++ b/code_project/sub_config_visualization.yaml
@@ -155,7 +155,7 @@ plots:
       clabel: Frequency # Colorbar label
       clabel_fontsize: 14
       cmin: null
-      cmax: 10000
+      cmax: null #10000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
@@ -188,7 +188,7 @@ plots:
       clabel: Frequency # Colorbar label
       clabel_fontsize: 14
       cmin: null
-      cmax: 1000
+      cmax: null #1000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
@@ -254,7 +254,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 500
+      cmax: null #500
       cmap: hot
       bins: 1000
       log_scale: false
@@ -287,7 +287,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 5000
+      cmax: null #5000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
@@ -353,7 +353,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 5000
+      cmax: null #5000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
@@ -386,7 +386,7 @@ plots:
       clabel: Frequency
       clabel_fontsize: 14
       cmin: null
-      cmax: 10000
+      cmax: null #10000
       cmap: hot # 'viridis', 'plasma', 'inferno', 'magma', 'hot', etc.
       bins: 1000 # Number of bins for histogram2d
       log_scale: false # Use logarithmic color scale?
